--- a/index_style.css
+++ b/index_style.css
@@ -2,7 +2,7 @@ body{
     margin: auto;
     width: 100%;
     height: 100%;
-    background-color: cornflowerblue;
+    background-color: #2980b9;
 }
 
 .container {
@@ -77,7 +77,7 @@ body{
 .login-button {
     height: 40px;
     width: 300px;
-    background-color: cornflowerblue;
+    background-color: #2980b9;
     border-radius: 10px;
     border: 0px;
     outline: 0px;
